--- a/index.html
+++ b/index.html
@@ -1,10 +1,36 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=https://docs.google.com/forms/d/e/1FAIpQLScoLWR0blz4Y8ceiz_jrBQjFAhlJwwx7S89XMoOQKawMc6FVg/viewform" />
-    <title>Redirecting...</title>
+    <title>Suman Form Page</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        text-align: center;
+        background-color: #fff;
+        margin-top: 100px;
+      }
+      h1 {
+        font-size: 48px;
+        color: #ff69b4; /* Gulabi (hot pink) */
+        margin-bottom: 40px;
+      }
+      a.button {
+        display: inline-block;
+        padding: 14px 28px;
+        font-size: 20px;
+        background-color: #007bff;
+        color: white;
+        text-decoration: none;
+        border-radius: 10px;
+        transition: background 0.3s ease;
+      }
+      a.button:hover {
+        background-color: #0056b3;
+      }
+    </style>
   </head>
   <body>
-    <p>Redirecting to Google Form... If not redirected, <a href="https://docs.google.com/forms/d/e/1FAIpQLScoLWR0blz4Y8ceiz_jrBQjFAhlJwwx7S89XMoOQKawMc6FVg/viewform">click here</a>.</p>
+    <h1>SUMAN</h1>
+    <a class="button" href="https://docs.google.com/forms/d/e/1FAIpQLScoLWR0blz4Y8ceiz_jrBQjFAhlJwwx7S89XMoOQKawMc6FVg/viewform" target="_blank">Open</a>
   </body>
 </html>
