--- a/index.html
+++ b/index.html
@@ -5,32 +5,43 @@
     <style>
       body {
         font-family: Arial, sans-serif;
+        background-color: #ffffff;
         text-align: center;
-        background-color: #fff;
-        margin-top: 100px;
+        margin: 0;
+        padding: 0;
       }
-      h1 {
-        font-size: 48px;
-        color: #ff69b4; /* Gulabi (hot pink) */
-        margin-bottom: 40px;
+
+      .container {
+        margin-top: 150px;
       }
-      a.button {
+
+      .name {
+        font-size: 60px;
+        font-weight: bold;
+        color: #ff69b4; /* Gulabi */
+        margin-bottom: 50px;
+      }
+
+      .button {
         display: inline-block;
         padding: 14px 28px;
         font-size: 20px;
         background-color: #007bff;
         color: white;
         text-decoration: none;
-        border-radius: 10px;
+        border-radius: 8px;
         transition: background 0.3s ease;
       }
-      a.button:hover {
+
+      .button:hover {
         background-color: #0056b3;
       }
     </style>
   </head>
   <body>
-    <h1>SUMAN</h1>
-    <a class="button" href="https://docs.google.com/forms/d/e/1FAIpQLScoLWR0blz4Y8ceiz_jrBQjFAhlJwwx7S89XMoOQKawMc6FVg/viewform" target="_blank">Open</a>
+    <div class="container">
+      <div class="name">SUMAN</div>
+      <a class="button" href="https://docs.google.com/forms/d/e/1FAIpQLScoLWR0blz4Y8ceiz_jrBQjFAhlJwwx7S89XMoOQKawMc6FVg/viewform" target="_blank">Open</a>
+    </div>
   </body>
 </html>
