--- a/index.html
+++ b/index.html
@@ -1,47 +1,94 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Suman Form Page</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        background-color: #ffffff;
-        text-align: center;
-        margin: 0;
-        padding: 0;
-      }
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Suman | Portfolio</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
-      .container {
-        margin-top: 150px;
-      }
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #0d0d0d;
+      color: white;
+      display: flex;
+      height: 100vh;
+      overflow: hidden;
+    }
 
-      .name {
-        font-size: 60px;
-        font-weight: bold;
-        color: #ff69b4; /* Gulabi */
-        margin-bottom: 50px;
-      }
+    .left {
+      width: 50%;
+      background: radial-gradient(circle, rgba(255,0,79,0.9), #0d0d0d);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
 
-      .button {
-        display: inline-block;
-        padding: 14px 28px;
-        font-size: 20px;
-        background-color: #007bff;
-        color: white;
-        text-decoration: none;
-        border-radius: 8px;
-        transition: background 0.3s ease;
-      }
+    .left img {
+      width: 300px;
+      height: 300px;
+      border-radius: 50%;
+      object-fit: cover;
+      box-shadow: 0 0 30px rgba(255, 0, 79, 0.6);
+    }
 
-      .button:hover {
-        background-color: #0056b3;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="container">
-      <div class="name">SUMAN</div>
-      <a class="button" href="https://docs.google.com/forms/d/e/1FAIpQLScoLWR0blz4Y8ceiz_jrBQjFAhlJwwx7S89XMoOQKawMc6FVg/viewform" target="_blank">Open</a>
-    </div>
-  </body>
+    .right {
+      width: 50%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      padding: 40px;
+    }
+
+    .right h1 {
+      font-size: 48px;
+      color: #ff69b4;
+    }
+
+    .right h2 {
+      font-size: 28px;
+      color: #ffffff;
+      margin-top: 10px;
+    }
+
+    .right p {
+      margin-top: 20px;
+      color: #bbbbbb;
+      line-height: 1.5;
+    }
+
+    .button {
+      margin-top: 30px;
+      padding: 12px 24px;
+      background-color: #ff0055;
+      border: none;
+      color: white;
+      font-size: 16px;
+      border-radius: 6px;
+      cursor: pointer;
+      transition: 0.3s ease;
+    }
+
+    .button:hover {
+      background-color: #cc0044;
+    }
+  </style>
+</head>
+<body>
+
+  <div class="left">
+    <img src="https://i.imgur.com/UWbD2K0.jpg" alt="Suman DP">
+  </div>
+
+  <div class="right">
+    <h1>Hi, It's Suman</h1>
+    <h2>I'm a Creative Designer</h2>
+    <p>I love designing modern and aesthetic interfaces. Let's build something beautiful together.</p>
+    <button class="button" onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLScoLWR0blz4Y8ceiz_jrBQjFAhlJwwx7S89XMoOQKawMc6FVg/viewform')">Open Form</button>
+  </div>
+
+</body>
 </html>
